--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ python:
   - "3.4"
   - "3.5"
 
-install: "pip install leveldb"
-script: python setup.py pytest
+install:
+  - pip install leveldb
+  - pip install coveralls
+
+script:
+  coverage run --source=levelpy setup.py pytest --addopts --cov=levelpy
+
+after_success:
+  coveralls
