--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install pytest-cov coveralls
 
 script:
-  coverage run --source=levelpy setup.py pytest --addopts '--cov=levelpy --cov-report=term-missing'
+  coverage run --source=levelpy setup.py pytest --addopts '--cov=levelpy.view --cov-report=term-missing'
 
 after_success:
   coveralls
