--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - pip install leveldb
   - pip install pytest pytest-cov
-  - pip install python-coveralls coveralls
+  - pip install python-coveralls
 
 #
 # script:
@@ -15,7 +15,7 @@ install:
 # after_success:
 #   coveralls
 script:
-    - py.test tests --cov=levelpy --cov-report=term-missing
+    - py.test tests --cov=levelpy --cov-report=term-missing -v
 
 after_success:
     - coveralls
