--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ language: python
 addons:
   apt:
     packages:
+      - libleveldb1
       - libleveldb-dev
+      - libsnappy1
+      - libsnappy-dev
 
 python:
   - "3.4"
